# lps25-cng

./: .gitignore  .nojekyll  1_crawl_calendar_for_links.py  1_crawled_links.json  2_parse_sessions.py  3_summaries_events.py  3_test_tagged_file.json  README.md  _quarto.yml  all.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  stats.html  stats.qmd
.github/workflows/: publish.yml
src/lps25_cng/: core.py
