[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "lps25-cng"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
jupyter = ">=1.1.1,<2"
numpy = ">=2.2.6,<3"
pandas = ">=2.2.3,<3"
nbformat = ">=5.10.4,<6"
pytest-playwright = ">=0.7.0,<0.8"
